beberapa tambahan untuk job seekers profile

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -24,5 +24,6 @@
     "/css/signup.css": "/css/signup.css",
     "/css/jobseekers-signin.css": "/css/jobseekers-signin.css",
     "/css/style_black.css": "/css/style_black.css",
-    "/css/pilihan.css": "/css/pilihan.css"
+    "/css/pilihan.css": "/css/pilihan.css",
+    "/css/app-admin.css": "/css/app-admin.css"
 }
